--- a/Adjacency list/Adjacency list.vcxproj
+++ b/Adjacency list/Adjacency list.vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4DBCD550-4836-46E6-BFB7-C4385D7AA189}</ProjectGuid>
-    <RootNamespace>graph</RootNamespace>
+    <ProjectGuid>{636D61AD-6CD2-4EAE-85FE-4F1FF145B9A4}</ProjectGuid>
+    <RootNamespace>Adjacencylist</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>Adjacency Marix</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -124,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="01邻接矩阵创建_CreateMGraph.c" />
+    <ClCompile Include="02邻接表创建_CreateALGraph.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
